[package]
name = "cw-huahua-name"
description = "CosmWasm name service for chihuahua chain"
version = "0.2.10"
authors = ["atmon3r <contact.atmoner@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Huahua-Name/cw-huahua-name"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.1.0"
cw-storage-plus = "0.13.4"
cw2 = "0.14.0"
cosmwasm-schema = "1.1.0"
thiserror = "1.0.31"

[dev-dependencies]

